Fixed issue with cellcolors overlapping tdselectrows in grids

--- a/src/RentalWorksWeb/Libraries/Fw/theme/material/FwBrowse.css
+++ b/src/RentalWorksWeb/Libraries/Fw/theme/material/FwBrowse.css
@@ -278,7 +278,7 @@ html.theme-material .fwbrowse .field[data-browsedatatype="appdocumentimage"] .vi
 html.theme-material .fwbrowse table tbody td.flexgridspacer{width:26px;float:right;display:block !important;}
 html.theme-material .fwbrowse table tbody td.browsecontextmenucell{position:absolute;right:0px;padding-left:2px !important;}
 html.theme-material .fwbrowse table tbody td.gridspacer{width:26px;float:left;display:block !important;}
-html.theme-material .fwbrowse table tbody td.tdselectrow{position:absolute;left:0px;padding-right:12px !important;}
+html.theme-material .fwbrowse table tbody td.tdselectrow{position:absolute;left:0px;padding-right:12px !important;z-index:1;}
 /********************
 Theme
 ********************/
