--- a/src/RentalWorksWeb/theme/rentalworks.css
+++ b/src/RentalWorksWeb/theme/rentalworks.css
@@ -629,6 +629,7 @@ html.theme-material [data-name="AuditHistoryGrid"] tbody tr.selected td ul:not(.
     #controlProperties .propertyContainer div.properties div {
         width: 50%;
         font-size: .9em;
+        text-indent:5px;
     }
 
 #controlProperties .propertyContainer div input:disabled {
